Add panels and brush (WIP)

--- a/styles/portfolio.module.scss
+++ b/styles/portfolio.module.scss
@@ -1,48 +1,91 @@
 @import './styles/utilities.module.scss';
 @import './styles/dark.theme.module.scss';
 
+$black: var(--background-color);
+$white: var(--color);
+$red: #FF0059;
+$green: #00FFA6;
+$blue: #2600FF;
+
 #portfolio {
     font-family: Menlo, Monaco, 'Courier New', monospace;
-    user-select: none;
-    top: 0px;
-    left: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #000;
-    height: 200vh;
+    justify-content: center;
+    color: $white;
     width: 100vw;
-    padding: 0in .5in;
-    transition: background-color 490ms ease-in-out;
-    z-index: 10;
-
-    &.background-color {
-        background-color: var(--background-color);
-    }
+    height: 100svh;
 
     .ctr {
+        max-width: 575px;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
+        gap: 30px;
+        z-index: 0;
     }
 
-    .line-wrapper {
-        line-height: normal;
+    .project {
+        padding: 18px 36px;
+        border-radius: 18px;
+        border: solid 2px $white;
+        // transform-style: preserve-3d;
+        // transform: perspective(5000px) rotateX(30deg) rotateY(30deg) rotateZ(345deg);
+        position: relative;
+        background-color: $black;
+
+        &::after {
+            content: '';
+            position: absolute;
+            z-index: -1;
+            height: 100%;
+            width: 100%;
+            border-radius: 18px;
+            border: solid 2px $white;
+            background-color: $green;
+            bottom: -80px;
+            right: -10%;
+        }
+
+        .name {
+            margin-top: 0px;
+            margin-bottom: 20px;
+            font-size: 3em;
+            color: $red;
+            font-weight: 700;
+            background-color: $black;
+
+            // DEV::after
+            // text-shadow: [x-offset] [y-offset] [blur-radius] [color];
+            // text-shadow: 0 0 21px $red;
+
+        }
+
+        .description {
+            background-color: $black;
+            font-size: 1em;
+            line-height: 1.5;
+            font-weight: 700;
+        }
     }
 
-    .name,
-    .title {
-        line-height: unset;
-        transition: font-size 300ms ease-in-out;
+    .paint-brush {
+        position: relative;
+        text-decoration: none;
+        z-index: 1;
     }
 
-    .name {
-        color: #fff;
-        font-size: 12vmin;
-    }
-
-    .title {
-        font-size: 12vmin;
-        color: $gray;
+    .paint-brush::after {
+        content: '';
+        position: absolute;
+        border-bottom: .2em solid $green;
+        margin-left: -15px;
+        padding-left: 50%;
+        border-radius: 70% 80% 40% 30%;
+        transform: rotate(-1deg);
+        left: 0;
+        right: 0;
+        bottom: 10px;
+        z-index: -1;
     }
 }
